continue the report of TP2